jilles      2006/07/03 23:18:12 UTC	(20060703-5704)
  Log:
  modrestart help file: add notice that a full restart may be more reliable
  

  Changes:	Modified:
  +2 -0		trunk/help/oservice/modrestart (File Modified) 


jilles      2006/07/03 23:00:41 UTC	(20060703-5702)
  Log:
  modunload help file: remove remark about unloading modload/modunload,
  we now deny this altogether.
  

  Changes:	Modified:
  +0 -3		trunk/help/oservice/modunload (File Modified) 


jilles      2006/07/03 22:56:53 UTC	(20060703-5700)
  Log:
  Don't allow /os modunload to unload operserv/main, operserv/modunload
  and operserv/modload. Allowing one of the former two would cause
  a crash, and allowing the latter is just dumb.
  

  Changes:	Modified:
  +7 -0		trunk/modules/operserv/modunload.c (File Modified) 


jilles      2006/07/03 22:48:14 UTC	(20060703-5698)
  Log:
  Update modrestart help file.
  

  Changes:	Modified:
  +4 -3		trunk/help/oservice/modrestart (File Modified) 


jilles      2006/07/03 22:40:19 UTC	(20060703-5696)
  Log:
  operserv modrestart:
  - tweak notice/wallops on failure
  - fix counts shown on success
  

  Changes:	Modified:
  +9 -6		trunk/modules/operserv/modrestart.c (File Modified) 


jilles      2006/07/03 22:21:20 UTC	(20060703-5694)
  Log:
  Don't send wallops about every module loaded on a module restart.
  

  Changes:	Modified:
  +1 -1		trunk/src/module.c (File Modified) 


jilles      2006/07/03 17:01:33 UTC	(20060703-5690)
  Log:
  Make chanserv join channels on modrestart
  

  Changes:	Modified:
  +5 -7		trunk/modules/chanserv/main.c (File Modified) 


jilles      2006/07/03 16:56:43 UTC	(20060703-5688)
  Log:
  operserv modrestart: make this work somewhat. still causes wallops floods.
  

  Changes:	Modified:
  +41 -27	trunk/modules/operserv/modrestart.c (File Modified) 


jilles      2006/07/03 16:25:03 UTC	(20060703-5686)
  Log:
  Use MODULE_USE_SYMBOL everywhere.
  This commit brought to you by: