@@ -1,1 +1,1 @@
-#define SERNO "20060703-5704"
+#define SERNO "20060703-5706"
