@@ -1,3 +1,14 @@
+jilles      2006/07/03 23:25:09 UTC	(20060703-5706)
+  Log:
+  ChanServ: only send entry messages and urls if the
+  user's server is end of burst, i.e. not after
+  netsplits or services restarts.
+  
+
+  Changes:	Modified:
+  +2 -2		trunk/modules/chanserv/main.c (File Modified) 
+
+
 jilles      2006/07/03 23:18:12 UTC	(20060703-5704)
   Log:
   modrestart help file: add notice that a full restart may be more reliable
